--- a/FE/src/app/pages/procesos/integracion/integracion.component.html
+++ b/FE/src/app/pages/procesos/integracion/integracion.component.html
@@ -307,6 +307,10 @@
                     <mat-icon>warning</mat-icon>
                     <span>Excepción</span>
                   </button>
+                  <button mat-menu-item (click)="eliminarPedido(file)" class="text-red-600">
+                    <mat-icon class="text-red-600">delete</mat-icon>
+                    <span class="text-red-600">Eliminar</span>
+                  </button>
                 </mat-menu>
               </td>
             </ng-container>
