--- a/FE/src/app/layouts/components/footer/footer.component.html
+++ b/FE/src/app/layouts/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   
   <div class="font-medium ltr:ml-4 rtl:mr-4 hidden sm:block flex items-center">
     <a href="https://nexusqtech.com" target="_blank" class="flex items-center hover:opacity-80 transition-opacity">
-      <img src="assets/img/icons/logos/nexusQtech.svg" alt="Nexus Q Tech" class="h-6 w-auto mr-2">
-      <span>Powered by Nexus Q Tech - Innovación tecnológica para tu negocio.</span>
+      <img src="assets/img/icons/logos/nexusQtech.svg" alt="Grupo Vanguardia" class="h-6 w-auto mr-2">
+      <span>Grupo Vanguardia</span>
     </a>
   </div>
 </div>
