--- a/FE/src/app/pages/mesa-control/validacion/validacion.component.html
+++ b/FE/src/app/pages/mesa-control/validacion/validacion.component.html
@@ -542,7 +542,12 @@
                      matTooltipPosition="above">
                   <mat-icon class="text-green-500" style="font-size: 20px; width: 20px; height: 20px;">verified</mat-icon>
                 </div>
-                <div *ngIf="item.idEstatus !== '2' && item.idEstatus !== '4'" class="flex items-center justify-center mx-auto cursor-help" 
+                <div *ngIf="item.idEstatus === '5'" class="flex items-center justify-center mx-auto cursor-help" 
+                     matTooltip="Documento rechazado" 
+                     matTooltipPosition="above">
+                  <mat-icon class="text-red-500" style="font-size: 20px; width: 20px; height: 20px;">cancel</mat-icon>
+                </div>
+                <div *ngIf="item.idEstatus !== '2' && item.idEstatus !== '4' && item.idEstatus !== '5'" class="flex items-center justify-center mx-auto cursor-help" 
                      matTooltip="Documento en proceso de revisión" 
                      matTooltipPosition="above">
                   <mat-icon class="text-blue-500" style="font-size: 20px; width: 20px; height: 20px;">hourglass_empty</mat-icon>
@@ -579,6 +584,24 @@
                   <mat-icon *ngIf="item.validado" class="absolute -top-1 -right-1 text-green-600 text-sm">check_circle</mat-icon>
                 </div>
                 <span *ngIf="item.idEstatus !== '3'" class="text-xs text-gray-400">-</span>
+              </td>
+            </ng-container>
+
+            <!-- Columna Rechazar -->
+            <ng-container matColumnDef="rechazar">
+              <th mat-header-cell *matHeaderCellDef class="w-20 py-2 bg-gray-50 text-xs font-medium text-gray-700 text-center">
+                Rechazar
+              </th>
+              <td mat-cell *matCellDef="let item" class="py-2 text-center">
+                <button *ngIf="item.idEstatus === '4'" 
+                        mat-icon-button 
+                        color="warn" 
+                        class="!w-6 !h-6 !min-h-6 !p-0"
+                        (click)="rechazarDocumento(item); $event.stopPropagation()"
+                        matTooltip="Rechazar documento">
+                  <mat-icon class="!text-sm">close</mat-icon>
+                </button>
+                <span *ngIf="item.idEstatus !== '4'" class="text-xs text-gray-400">-</span>
               </td>
             </ng-container>
 
